syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.benchmark";

package benchmark;

service BenchmarkService {
  rpc Process (BenchmarkRequest) returns (BenchmarkResponse) {}
}

message BenchmarkRequest {
  string input = 1;
}

message BenchmarkResponse {
  string output = 1;
}